@@ -4,6 +4,13 @@
 
 	* grub-core/commands/menuentry.c (setparams_prefix): Use single
 	quotes for arguments.
+	* grub-core/lib/legacy_parse.c (grub_legacy_escape): Use
+	grub_script_escape_squotes function instead.
+
+	* include/grub/script_sh.h (grub_script_escape_squotes): New
+	prototype.
+	* grub-core/script/script.c (grub_script_escape_squotes): New
+	function.
 
 2010-11-18  Vladimir Serbinenko  <phcoder@gmail.com>
 
